Relocate repository to new GitHub organization
The git repository has been moved to be controlled by a new organization
on GitHub. This allows multiple people to have commit access. This
commit updates the documentation to reflect the new repository address.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 Changelog
 ---------
 
+0.2 (2012-10-31)
+````````````````
+* Moved GitHub repository to the provoke-vagueness organization
+
 0.1 (2012-09-17)
 ````````````````
 * First pre-alpha release.
