--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 Changelog
 ---------
 
+0.2.5 (2015-07-17)
+``````````````````
+Added proper support for python 3.x
+
 0.2 (2012-10-31)
 ````````````````
 * Moved GitHub repository to the provoke-vagueness organization
